objects/icrt__Guide_Execution__c.object
<CustomObject>
    <fields>
        <fullName>icrt__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>icrt__Ending_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ending User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Guides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>icrt__Guide_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Guide</label>
        <referenceTo>icrt__Guide_Definition__c</referenceTo>
        <relationshipLabel>Guide Executions</relationshipLabel>
        <relationshipName>Guide_Executions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>icrt__Outcome__c</fullName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_ID__c</fullName>
        <label>Run On ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_Info__c</fullName>
        <label>Run On Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_Name__c</fullName>
        <label>Run On Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_Type__c</fullName>
        <label>Run On Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On__c</fullName>
        <formula>HYPERLINK(icrt__Run_On_ID__c, icrt__Run_On_Name__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Running_Guide__c</fullName>
        <formula>IF(ISPICKVAL(icrt__Status__c, &apos;Running&apos;),
   HYPERLINK(&apos;/apex/icrt__AeGuideList?objectType=&apos; +  IF(icrt__Run_On_Type__c = &apos;User&apos;, &apos;_any&apos;, icrt__Run_On_Type__c) + &apos;&amp;objectId=&apos; +  icrt__Run_On_ID__c + &apos;&amp;guideName=&apos; + SUBSTITUTE(icrt__Guide_Definition__r.Name, &apos;+&apos;, &apos;%2B&apos;), &apos;Open&apos;, &apos;_self&apos;),
   &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>icrt__Starting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Starting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Started_Guides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>icrt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Guide Execution</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guide Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>